prometheus/grafana-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-stack-grafana-headless
  namespace: monitoring
spec:
  clusterIP: None
  selector:
    app: prometheus-stack-grafana
  ports:
  - port: 80
    targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus-stack-grafana
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: prometheus-stack-grafana
  ports:
  - port: 80
    targetPort: 3000
